--- a/react-todo/src/App.css
+++ b/react-todo/src/App.css
@@ -10,6 +10,7 @@ img{
 
 html{
   font-size: 62.5%;
+  font-family: Helvetica,Arial, sans-serif;
 }
 
 section{
@@ -23,26 +24,38 @@ section{
 
 nav{
   height: 10vh;
-  width: 100%;
-  display: flex;
+  width: 800px;
+  max-width: 800px;  display: flex;
   justify-content: center;
   align-items: center;
   background-color: plum;
+  border: solid 1px black;
+  border-bottom: none;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+
 }
 
 article{
   background-color: lightblue;
   min-height: 5%;
-  width: 100%;
+  width: 800px;
+  max-width: 800px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   flex-direction: column;
+  border: solid 1px black;
+  border-top: none;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  overflow-x: hidden;
 }
 
 .todo-item{
-  width: 100%;
+  width: 800px;
+  max-width: 800px;  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,4 +69,52 @@ article{
 
 .visuals{
   text-decoration: line-through;
+}
+
+form{
+  margin: 10px 0;
+  width: 100%;
+}
+
+input[type="text"]{
+  height: 25px;
+  width: 60%;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+input[type="submit"]{
+  color: white;
+  background-color: purple;
+  border: none;
+  border-radius: 5px;
+  margin-left: 5px;
+  padding: 5px 25px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover{
+  background-color: plum;
+}
+
+input[type="checkbox"]{
+  scale: 1.5;
+  cursor: pointer;
+}
+
+p{
+  font-size: clamp(1rem,1.2vw,2rem);
+}
+
+a{
+  padding: 10px 15px;
+  background-color: gold;
+  font-weight: 900;
+  font-size: clamp(1rem,1.2vw,1.2rem);
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+a:hover{
+  background-color: coral;
 }
