add thickness for line

--- a/react-todo/src/App.css
+++ b/react-todo/src/App.css
@@ -69,6 +69,8 @@ article{
 
 .visuals{
   text-decoration: line-through;
+  text-decoration-color: red;
+  text-decoration-thickness: 5px;
 }
 
 form{
